--- a/main.css
+++ b/main.css
@@ -15,3 +15,15 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 100;
 }
+
+#cityTime{
+    font-size: 25px ;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+}
+
+#cityWind{
+    font-size: 25px ;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+}
